--- a/index.html
+++ b/index.html
@@ -788,6 +788,47 @@
         </div>
       </div>
     </div>
+
+    <div
+      class="relative w-full max-w-[900px] bg-[#262626] rounded-[2.5rem] p-10 md:p-14 overflow-hidden shadow-2xl"
+    >
+      <h1
+        class="text-5xl md:text-[5.5rem] font-bold text-white leading-[1.1] tracking-tight mb-20"
+      >
+        Let&rsquo;s <span class="text-[#e27c60]">build</span> and
+        <span class="text-[#e27c60]">scale</span> it!
+      </h1>
+
+      <div class="flex items-center w-full pr-0 md:pr-[280px]">
+        <a
+          href="mailto:mailus@tive.co"
+          class="text-white text-xl md:text-2xl font-light hover:underline"
+        >
+          mailus@tive.co
+        </a>
+        <div class="h-[2px] bg-[#e27c60] flex-grow ml-8 rounded-full"></div>
+      </div>
+
+      <button
+        class="absolute bottom-0 right-0 bg-[#e27c60] text-white text-2xl font-normal py-9 px-12 rounded-tl-[3rem] hover:bg-[#d66d52] transition-colors flex items-center gap-3 group"
+      >
+        Get in touch
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2.5"
+          stroke="currentColor"
+          class="w-6 h-6 group-hover:translate-x-1 transition-transform"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 4.5l7.5 7.5-7.5 7.5"
+          />
+        </svg>
+      </button>
+    </div>
   </body>
   <script src="/index.js"></script>
 </html>
