--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <div
           class="border h-[20rem] lg:h-[34rem] w-full lg:flex-[0_0_500px] rounded-lg overflow-hidden bg-gray-100"
         >
-          <!-- Placeholder visual -->
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHZqj-XReJ2R76nji51cZl4ETk6-eHRmZBRw&s" alt="About us image" class="w-full h-full">
         </div>
 
         <!-- Accordion / Right Column -->
@@ -830,8 +830,12 @@
         <!-- Accordion Content -->
         <div class="srv-acc-content overflow-hidden transition-all duration-300 max-h-[1000px]">
           <div class="flex flex-col sm:flex-row items-stretch gap-4 mt-6">
-            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem]"></div>
-            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem]"></div>
+            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem] rounded-xl overflow-hidden">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHZqj-XReJ2R76nji51cZl4ETk6-eHRmZBRw&s" alt="Services Image" class="object-cover w-full h-full">
+            </div>
+            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem] rounded-xl overflow-hidden">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHZqj-XReJ2R76nji51cZl4ETk6-eHRmZBRw&s" alt="Services Image" class="object-cover w-full h-full">
+            </div>
           </div>
         </div>
       </div>
@@ -858,8 +862,12 @@
         <!-- Accordion Content -->
         <div class="srv-acc-content overflow-hidden transition-all duration-300 max-h-0">
           <div class="flex flex-col sm:flex-row items-stretch gap-4 mt-6">
-            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem]"></div>
-            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem]"></div>
+            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem] rounded-xl overflow-hidden">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHZqj-XReJ2R76nji51cZl4ETk6-eHRmZBRw&s" alt="Services Image" class="object-cover w-full h-full">
+            </div>
+            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem] rounded-xl overflow-hidden">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHZqj-XReJ2R76nji51cZl4ETk6-eHRmZBRw&s" alt="Services Image" class="object-cover w-full h-full">
+            </div>
           </div>
         </div>
       </div>
@@ -886,8 +894,12 @@
         <!-- Accordion Content -->
         <div class="srv-acc-content overflow-hidden transition-all duration-300 max-h-0">
           <div class="flex flex-col sm:flex-row items-stretch gap-4 mt-6">
-            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem]"></div>
-            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem]"></div>
+            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem] rounded-xl overflow-hidden">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHZqj-XReJ2R76nji51cZl4ETk6-eHRmZBRw&s" alt="Services Image" class="object-cover w-full h-full">
+            </div>
+            <div class="border border-gray-600 flex-1 rounded-lg h-[200px] sm:h-[250px] md:h-[300px] lg:h-[25rem] rounded-xl overflow-hidden">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHZqj-XReJ2R76nji51cZl4ETk6-eHRmZBRw&s" alt="Services Image" class="object-cover w-full h-full">
+            </div>
           </div>
         </div>
       </div>
